--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ n_splits: 10
 xgb:
   n_estimators: 2000
   learning_rate: 0.02991957949910793
-  max_depth: 3
+  max_depth: 4
   subsample: 0.820977051070539
   colsample_bytree: 0.8249105082984818
   reg_lambda: 1.4657671110020007
@@ -18,14 +18,14 @@ xgb:
   min_child_weight: 8.852531449685662
   gamma: 0.4162279086098966
   tree_method: "hist"
-  device: "cuda" # change to "cuda" if GPU available
+  device: "cuda"
   eval_metric: "auc"
   early_stopping_rounds: 100
 
 lgb:
   n_estimators: 1500
   learning_rate: 0.03835277907158992
-  max_depth: -1
+  max_depth: 4
   num_leaves: 16
   min_child_samples: 64
   subsample: 0.7053029681144002
@@ -37,11 +37,11 @@ lgb:
 cat:
   iterations: 3091
   learning_rate: 0.04963674908044717
-  depth: 4
+  depth: 5
   l2_leaf_reg: 4.3874876523189394
   bagging_temperature: 0.3401704702286477
   random_strength: 3.372651467834558
-  task_type: "GPU" # change to "GPU" if GPU available
+  task_type: "GPU"
   verbose: 0
 
 meta:
@@ -51,5 +51,19 @@ meta:
   max_iter: 5000
 
 mlflow:
-  experiment_name: "heart-disease-detection"
-  tracking_uri: "mlruns"
+  tracking_uri: "https://dagshub.com/Chetan559/Heart_disease_MLflow.mlflow"
+
+  experiments:
+    xgb: "HeartDisease-XGBoost"
+    lgb: "HeartDisease-LightGBM"
+    cat: "HeartDisease-CatBoost"
+    meta: "HeartDisease-MetaLearner"
+
+  registered_models:
+    xgb: "HeartDisease-XGBoost"
+    lgb: "HeartDisease-LightGBM"
+    cat: "HeartDisease-CatBoost"
+    meta: "HeartDisease-Stack"
+
+  champion_alias: "candidate"
+  champion_alias_prod: "champion"
